fix: set text align of MD files content to be "justify"

--- a/src/assets/styles/Articles.scss
+++ b/src/assets/styles/Articles.scss
@@ -223,6 +223,7 @@
     line-height: 1.7;
     font-size: 16px;
     max-width: 760px;
+    text-align: justify;
 }
 
 .post-body h1,
